# QT-Text-editor-c-

./: BUILD.md  CMakeLists.txt  PROJECT_SUMMARY.txt  QUICK_START.md  README.md  SOLUTION.md  run-direct  run.sh
include/: documentmanager.h  editor.h  mainwindow.h  searchreplace.h  syntaxhighlighter.h  undoredostack.h
resources/: resources.qrc
src/: documentmanager.cpp  editor.cpp  main.cpp  mainwindow.cpp  searchreplace.cpp  syntaxhighlighter.cpp  undoredostack.cpp
ui/: mainwindow.ui
